<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.GebruikerInzien">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/email"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_infoEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/inlognaam"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_infoInlognaam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/wachtwoord"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_infoWachtwoord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/voornaam"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_infoVoornaam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/achternaam"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_infoAchternaam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/voorletters"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_infoVoorletters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/geslacht"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_infoGeslacht"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/geboortedatum"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_infoGeboortedtm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/plaats"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_infoPlaats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/straatnaam"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_infoStraatnaam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/huisnummer"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_infoHuisnummer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/tel"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_infoTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/iban"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_infoIban"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>